# x-customized-feed

./: .gitignore  README.md  classifier.py  main.py  prompt.py  tweets-test.py  tweets.py
client/: components.json  package.json
client/public/: index.html
client/public/static/: censored.json  techbro.json  trv.json
client/src/: App.js  index.js
client/src/components/: mainfeed.jsx  modal.css  modal.js
client/src/components/icons/: BellIcon.js  HeartIcon.js  HomeIcon.js  ListIcon.js  SearchIcon.js  TwitterIcon.js  UserIcon.js
client/src/components/ui/: input.jsx
client/src/services/: api.js
interface-customized-feed/custom-feed/: package-lock.json  package.json
interface-customized-feed/custom-feed/public/static/: normal.json  tech-list.json  violent.json
interface-customized-feed/custom-feed/src/: App.css  App.js  index.css
interface-customized-feed/custom-feed/src/components/: mainfeed.jsx  modal.css  modal.js  sidebar.jsx  testPrompt.jsx
interface-customized-feed/custom-feed/src/components/icons/: BookmarkIcon.js  MailboxIcon.js  MessageCircleIcon.js  MoreHorizontalIcon.js  RepeatIcon.js  SettingsIcon.js  TwitterIcon.js  UploadIcon.js
interface-customized-feed/custom-feed/src/components/ui/: avatar.jsx  button.jsx  select.jsx  tooltip.jsx
interface-customized-feed/custom-feed/src/services/: api.js
moondream/: Cargo.toml  pyproject.toml
moondream/src/: lib.rs  logits_processor.rs  pipeline.rs
