[package]
name = "moondream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "moondream"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
candle = { git="https://github.com/huggingface/candle/", package = "candle-core", features = ["metal"] }
candle-transformers = { git="https://github.com/huggingface/candle/", package = "candle-transformers"}
candle-nn = { git="https://github.com/huggingface/candle/", package = "candle-nn", features = ["metal"] }
tokenizers = "0.15.2"
hf-hub = "0.3.2"
anyhow = "1.0.81"
image = "0.25.1"
serde = "1.0.198"
serde_json = "1.0.116"
thiserror = "1.0.59"
log = "0.4.21"
pyo3-log = "0.9.0"
rand = "0.8.5"
